Fixed Text Alignment

--- a/Assessment1/styles/main.css
+++ b/Assessment1/styles/main.css
@@ -64,6 +64,7 @@ h1, h2, h3, h4, h5 {
     border-bottom: 1px solid #3a3a3a;
     border-top: 1px solid #3a3a3a;
     margin: 0 auto;
+    text-align: center;
 }
 
 .article-footer img {
